# SpecMerger

./: .gitignore  COQParser.py  Comparer.py  ECMAParser.py  Formatter.py  GenericComparer.py  GenericCoqParser.py  GenericECMAParser.py  GenericParsedPageRenderer.py  HTMLRenderer.py  JSONParser.py  README.MD  Report.py  aligner.py  aligner_utils.py  changes_report.txt  comparer_utils.py  comparison_report.html  coq_parser.py  ecma_parser.py  error_warning_count.py  genericECMAParser.py  generic_main.py  generic_result.html  generic_result2.html  generic_template.html  html_renderer.py  jsons.html  jsons2.html  main.py  pyproject.toml  special_comparator.py  text_renderer.py  utils.py
.nix/: flake.nix
content_classes/: alignment_issue.py  bag.py  dictionary.py  misalignment.py  ordered_dictionary.py  ordered_seq.py  string.py  wildcard.py
json_example/: json_comparison_report.html  json_parser.py  readme.md  test_example.py
json_example/jsons/: implem.py  test.json  test2.json
jsons/: test.json  test2.json
non_generic/: COQParser.py  Comparer.py  ECMAParser.py  Formatter.py  formatted_template.html  main.py  non_generic_utils.py
spec_merger/: aligner.py  aligner_utils.py  coq_parser.py  ecma_parser.py  error_warning_count.py  generic_main.py  html_renderer.py  special_comparator.py  utils.py
spec_merger/content_classes/: alignment_issue.py  bag.py  dictionary.py  misalignment.py  ordered_dictionary.py  ordered_seq.py  string.py  wildcard.py
test_example/: python_parser.py  readme.md
test_example/documents/: spec.json
