[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "*.py",
    "content_classes/*.py",
  "generic_template.html",
]
exclude = [
  "test_example/*"
]

[tool.hatch.build.targets.wheel]
packages = [""]


[project]
name = "spec-merger"
version = "0.1.0"
dependencies = [
    "nltk>=3.8.1",
    "alectryon>=1.4.0"
]
requires-python = ">= 3.10"

